--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
@@ -49,6 +49,23 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="SourceOfCaseLookupId">Source of case</label>
+                        <ng-select [options]="sourceOfCaseLookupOptionList"
+                                   placeholder="Select"
+                                   formControlName="SourceOfCaseLookupId"
+                                   [(ngModel)]="caseBook.Case.SourceOfCaseLookupId"
+                                   [allowClear]="true">
+                        </ng-select>
+                        <div>
+                            <small *ngIf="casePrimaryForm.controls.SourceOfCaseLookupId.hasError('required') && casePrimaryForm.controls.SourceOfCaseLookupId.touched" class="mat-text-warn">Source of case is required.</small>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="SourceOfCaseDesc">If others, please specify</label>
+                        <input formControlName="SourceOfCaseDesc" class="form-control" [(ngModel)]="caseBook.Case.SourceOfCaseDesc" maxlength="2000" />
+                    </div>
+                    <div class="form-group">
                         <label for="FirstNameId">First Name *</label>
                         <input id="FirstNameId" placeholder="First Name" formControlName="ClientFirstName" [(ngModel)]="caseBook.Case.ClientFirstName" class="form-control" />
                         <div>
@@ -68,6 +85,16 @@
                         <label for="MiddleInitialId">M.I.</label>
                         <input id="MiddleInitialId" placeholder="Middle Initials" formControlName="Mi" [(ngModel)]="caseBook.Case.Mi" class="form-control" maxlength="2000" />
                     </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 d-flex flex-column">
+            <div class="card flex-fill">
+                <div class="card-header">
+                    Client Details
+                </div>
+                <div class="card-block">
                     <div class="form-group">
                         <label for="FatherHusbandNameId">Father / Husband Name *</label>
                         <input id="FatherHusbandNameId" placeholder="Father / Husband Name" formControlName="FatherName" [(ngModel)]="caseBook.Case.FatherName" class="form-control" />
@@ -76,15 +103,6 @@
                             <small *ngIf="casePrimaryForm.controls.FatherName.dirty && casePrimaryForm.controls.FatherName.invalid" class="mat-text-warn">Please provide a valid Father / Husband Name</small>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 d-flex flex-column">
-            <div class="card flex-fill">
-                <div class="card-header">
-                    Client Address Details
-                </div>
-                <div class="card-block">
                     <div class="form-group">
                         <label for="AddressId">Address *</label>
                         <textarea id="AddressId" placeholder="Address" formControlName="Address" class="form-control" [(ngModel)]="caseBook.SelectedAddress.Address" maxlength="300"></textarea>
