--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.create.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="SourceOfCaseLookupId">Source of case</label>
+                        <label for="SourceOfCaseLookupId">Source of case *</label>
                         <ng-select [options]="sourceOfCaseLookupOptionList"
                                    placeholder="Select"
                                    formControlName="SourceOfCaseLookupId"
