--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/primary_case.component.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="SourceOfCaseLookupId">Source of case</label>
+                        <label for="SourceOfCaseLookupId">Source of case *</label>
                         <ng-select [options]="sourceOfCaseLookupOptionList"
                                    placeholder="Select"
                                    formControlName="SourceOfCaseLookupId"
