--- a/NexGenRedAlert/NexGenRedAlert/Views/MainPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/MainPage.xaml
@@ -1,29 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:views="clr-namespace:NexGenRedAlert.Views"
             x:Class="NexGenRedAlert.Views.MainPage">
-    <TabbedPage.Children>
-        <NavigationPage Title="Browse">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ItemsPage />
-            </x:Arguments>
-        </NavigationPage>
-        
-        <NavigationPage Title="About">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>
-    </TabbedPage.Children>
-</TabbedPage>
+    <ContentPage.Content>
+        <StackLayout x:Name="MainLayout">
+            <StackLayout x:Name="LogoStack" VerticalOptions="FillAndExpand">
+                <Image x:Name="LoginIcon" Source="logoMychoices.png" Margin="0,10,50,0" />
+            </StackLayout>
+            <StackLayout VerticalOptions="StartAndExpand" Margin="20,0,20,0" >
+                <ActivityIndicator x:Name="activityIndicator" IsRunning="True" Color="Crimson"/>
+                <Button x:Name="preSvpButton" Text="Pre-Svp Form" Clicked="OpenPreSvpPage" />
+                <Button x:Name="postSvpButton" Text="Post-Svp Form" Command="{Binding OpenPostSvpForms}" />
+                <Button x:Name="button_login" Text="Incomplete Forms" Command="{Binding OpenPostSvpForms}" />
+                <Label Text="ROTATION"
+               BindingContext="{x:Reference Name=slider}"
+               Rotation="{Binding Path=Value}"
+               FontAttributes="Bold"
+               FontSize="Large"
+               HorizontalOptions="Center"
+               VerticalOptions="CenterAndExpand" />
+
+                <Slider x:Name="slider"
+                Maximum="360"
+                VerticalOptions="CenterAndExpand" />
+            </StackLayout>
+        </StackLayout>
+    </ContentPage.Content>
+</ContentPage>
