--- a/NexGenRedAlert/NexGenRedAlert/Views/PreSvpForm.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/PreSvpForm.xaml
@@ -7,44 +7,59 @@
         <ScrollView >
             <StackLayout Margin="20,20,20,0" Spacing="10" Orientation="Vertical" VerticalOptions="FillAndExpand">
                 <Label x:Name="VillageCodeLabel" Text="VillageCode:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="VillageCodeEntry" Placeholder="Village Code" Keyboard="Numeric"/>
+                <Entry x:Name="VillageCodeEntry" Placeholder="Village Code" Keyboard="Numeric" Text="{Binding PreSvp.VillageCode, Mode=TwoWay}" />
                 <Frame x:Name="frame"  IsVisible="False" Margin="0,50,0,0" >
                     <Label x:Name="VillageName" Text="" FontSize="20" />
                     <Label x:Name="DistrictName" Text="" FontSize="20" />
                 </Frame>
-                <Label x:Name="SvpDateLabel" Text="PreSvpDate" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <DatePicker Format="D" TextColor="Black" />
+                <Label x:Name="SvpDateLabel" Text="PreSvp Date" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
+                <DatePicker Format="D" TextColor="Black" Date="{Binding PreSvp.PreSvpDate, Mode=OneWayToSource}" />
 
                 <Label x:Name="DistanceToVillageLabel" Text="One Way Distance to Village:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="DistanceToVillageEntry" Placeholder="kilometers" Keyboard="Numeric" />
+                <Entry x:Name="DistanceToVillageEntry" Placeholder="kilometers" Keyboard="Numeric" Text="{Binding PreSvp.DistanceToVillage, Mode=TwoWay}" />
+                
                 <Label x:Name="LocationDescLabel" Text="Location Description:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="LocationDescEntry" Placeholder="Location Description" />
+                <Entry x:Name="LocationDescEntry" Placeholder="Location Description" Text="{Binding PreSvp.LocationDesc, Mode=TwoWay}" />
+                
                 <Label x:Name="MajorEmploymentLabel" Text="Major Source of Income:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="MajorEmploymentEntry" Placeholder="Major Source of Income" />
+                <Entry x:Name="MajorEmploymentEntry" Placeholder="Major Source of Income" Text="{Binding PreSvp.MajorSourceOfIncome, Mode=TwoWay}" />
+                
                 <Label x:Name="ActiveCommunityLabel" Text="Mention the details of active Community Groups (SHG/CVC) to facilitate the program" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Editor x:Name="ActiveCommunityDetailsEntry"  />
+                <Editor x:Name="ActiveCommunityDetailsEntry" Text="{Binding PreSvp.ActiveCommunityGroup, Mode=TwoWay}" />
+                
                 <Label x:Name="ChildAbuseCountLabel" Text="Child Abuse Count:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
                 <Entry x:Name="ChildAbuseCountEntry" Placeholder="Child Abuse count" Keyboard="Numeric" Text="{Binding PreSvp.ChildAbuseCount, Mode=TwoWay}" />
+                
                 <Label x:Name="DomesticAbuseCountLabel" Text="Domestic Abuse Count:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="DomesticAbuseCountEntry" Placeholder="Domestic Abuse count" Keyboard="Numeric" />
+                <Entry x:Name="DomesticAbuseCountEntry" Placeholder="Domestic Abuse count" Keyboard="Numeric" Text="{Binding PreSvp.DomesticViolenceCasesCount, Mode=TwoWay}" />
+                
                 <Label x:Name="TraffickingAbuseCountLabel" Text="Trafficking Abuse Count:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="TraffickingAbuseCountEntry" Placeholder="Trafficking Abuse count" Keyboard="Numeric" Text="{Binding PreSvp.ChildAbuseCount, Mode=TwoWay}" />
+                <Entry x:Name="TraffickingAbuseCountEntry" Placeholder="Trafficking Abuse count" Keyboard="Numeric" Text="{Binding PreSvp.TraffickingCasesCount, Mode=TwoWay}" />
+                
                 <Label x:Name="MissingCountLabel" Text="Missing Count:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="MissingCountEntry" Placeholder="Missing count" Keyboard="Numeric" />
+                <Entry x:Name="MissingCountEntry" Placeholder="Missing count" Keyboard="Numeric" Text="{Binding PreSvp.MissingCasesCount, Mode=TwoWay}" />
+                
                 <Label x:Name="SchoolDropoutCountLabel" Text="School Dropout Count:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="SchoolDropoutCountEntry" Placeholder="School dropout count" Keyboard="Numeric" />
+                <Entry x:Name="SchoolDropoutCountEntry" Placeholder="School dropout count" Keyboard="Numeric" Text="{Binding PreSvp.SchoolDropOutsCount, Mode=TwoWay}" />
+                
                 <Label x:Name="TrafficProneDescLabel" Text="Details of Neighbourhood trafficking-prone villages:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Editor x:Name="TrafficProneDescEntry" />
+                <Editor x:Name="TrafficProneDescEntry" Text="{Binding PreSvp.NeighbouringTrafficProneDesc, Mode=TwoWay}" />
+                
                 <Label x:Name="LocalIssuesLabel" Text="Local Issues description:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Editor x:Name="LocalIssuesEntry"/>
+                <Editor x:Name="LocalIssuesEntry" Text="{Binding PreSvp.LocalIssuesDesc, Mode=TwoWay}"/>
+                
                 <Label x:Name="TraffickingAwarenessLabel" Text="Is there awareness about trafficking ?:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="TraffickingAwarenessEntry" Placeholder="Description" />
+                <Entry x:Name="TraffickingAwarenessEntry" Placeholder="Description" Text="{Binding PreSvp.AwarenessDesc, Mode=TwoWay}" />
+                
                 <Label x:Name="CausesOfTraffickingLabel" Text="Causes of Trafficking (Risks):" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Editor x:Name="CausesOfTraffickingEntry" />
+                <Editor x:Name="CausesOfTraffickingEntry" Text="{Binding PreSvp.TraffickingCausesDesc, Mode=TwoWay}" />
+                
                 <Label x:Name="PreviousAwarnessLabel" Text="Previous Awarness (Yes/No) ?:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Picker x:Name="PreviousAwarnessPicker" Title="Previous Awarness (Yes/No) ?"  ItemsSource="{Binding Path=PreviousAwarenessList, Mode=TwoWay}"  />
+                <Picker x:Name="PreviousAwarnessPicker" Title="Previous Awarness (Yes/No) ?" SelectedItem="{Binding PreSvp.PreviousAwareness, Mode=TwoWay}" ItemsSource="{Binding Path=PreviousAwarenessList, Mode=TwoWay}"  />
+                
                 <Label x:Name="PreviousAwarnessDescLabel" Text="Details of previous anti-trafficking awareness program:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                <Editor x:Name="PreviousAwarnessDescEntry"/>
+                <Editor x:Name="PreviousAwarnessDescEntry" Text="{Binding PreSvp.PreviousAwarenessDesc, Mode=TwoWay}"/>
+                
                 <StackLayout Orientation="Horizontal">
                     <Button x:Name="ResetButton" Text="Reset" Clicked="OnResetClicked" />
                     <Button x:Name="SaveAndExitButton" Text="Save And Exit" />
