--- a/NexGenRedAlert/NexGenRedAlert/Views/PostSvpFormTabbed.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/PostSvpFormTabbed.xaml
@@ -14,8 +14,11 @@
                         <Label x:Name="VillageName" Text="" FontSize="20" />
                         <Label x:Name="DistrictName" Text="" FontSize="20" />
                     </Frame>
-                    <Label x:Name="SvpDateLabel" Text="PreSvpDate" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
-                    <DatePicker Format="D" TextColor="Black" Date="{Binding PostSvp.PostSvpDate, Mode=OneWayToSource}" />
+                    <Label x:Name="IpCodeLabel" Text="IP Code:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
+                    <Entry x:Name="IpCodeEntry" Placeholder="IP Code"   Text="{Binding PostSvp.CreatedBy}"/>
+
+                    <Label x:Name="SvpDateLabel" Text="PostSvpDate" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
+                    <DatePicker x:Name="SvpDatePicker" Format="D" TextColor="Black" Date="{Binding PostSvp.PostSvpDate, Mode=OneWayToSource}" />
 
                     <Label x:Name="TravelHoursLabel" Text="Travel time to Village:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
                     <Entry x:Name="TravelHoursEntry" Placeholder="Hours" Keyboard="Numeric" Text="{Binding PostSvp.TravelHours, Mode=TwoWay}" />
@@ -67,9 +70,9 @@
 
                     <Label x:Name="TotalParticipationCountLabel" Text="Total Participation Count:" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
                     <Entry x:Name="TotalParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding PostSvp.TotalParticipationCount, Mode=TwoWay}" />
-                    <StackLayout Orientation="Horizontal">
+                    
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                         <Button x:Name="ResetButton1" Text="Reset" />
-                        <Button x:Name="SaveAndExitButton1" Text="Save And Exit" />
                         <Button x:Name="NextPage" Text="Next Page" Clicked="onClickChangeTab" />
                     </StackLayout>
                 </StackLayout>
@@ -134,9 +137,8 @@
                     <Label x:Name="PoliceContactNumberLabel" Text="Police Contact Number :" FontSize="20" TextColor="{StaticResource PrimaryDark}"/>
                     <Entry x:Name="PoliceContactNumberEntry" Placeholder="Phone Number" Keyboard="Numeric" Text="{Binding PostSvp.PoliceContactNumber, Mode=TwoWay}" />
 
-                    <StackLayout Orientation="Horizontal">
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                         <Button x:Name="ResetButton2" Text="Reset" />
-                        <Button x:Name="SaveAndExitButton2" Text="Save And Exit" />
                         <Button x:Name="Submit" Text="Submit" Command="{Binding SubmitPostSvpForm}" />
                     </StackLayout>
                 </StackLayout>
