--- a/NexGenRedAlert/NexGenRedAlert/Views/LoginPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/LoginPage.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NexGenRedAlert.Views.LoginPage">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
             <Image Source="LoginLogo.png" HorizontalOptions="FillAndExpand"
                        VerticalOptions="Start" Margin="20,20,50,20" />
-            <Button x:Name="loginButton" Text="Sign In With Google" Margin="20,20,20,20" Clicked="GoogleAuth" />
+            <ActivityIndicator x:Name="LoginActivityIndicator" HeightRequest="40" VerticalOptions="Start"
+                          HorizontalOptions="Center" IsRunning="True" IsVisible="False" />
+            
+            <Button x:Name="loginButton" Text="Sign In With Google" Margin="20,20,20,20" VerticalOptions="End"  Clicked="GoogleAuth" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
