--- a/NexGenRedAlert/NexGenRedAlert/Views/LoginPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/LoginPage.xaml
@@ -4,7 +4,7 @@
              x:Class="NexGenRedAlert.Views.LoginPage">
     <ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-            <Image Source="LoginLogo.png" HorizontalOptions="FillAndExpand"
+            <Image Source="MyChoicesLogo.png" HorizontalOptions="FillAndExpand"
                        VerticalOptions="Start" Margin="20,20,50,20" />
             <ActivityIndicator x:Name="LoginActivityIndicator" HeightRequest="40" VerticalOptions="Start"
                           HorizontalOptions="Center" IsRunning="True" IsVisible="False" />
