--- a/NexGenRedAlert/NexGenRedAlert/Views/PostSvpFormTabbed.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/PostSvpFormTabbed.xaml
@@ -4,7 +4,7 @@
              x:Class="NexGenRedAlert.Views.PostSvpFormTabbed"
             Title="Post-Svp Form">
   <!--Pages can be added as references or inline-->
-    <ContentPage x:Name="page1" Title="Page 1" >
+    <ContentPage x:Name="pageOne" Title="Page 1" >
         <ContentPage.Content>
             <ScrollView >
                 <StackLayout Margin="20,20,20,0" Spacing="10" Orientation="Vertical" VerticalOptions="FillAndExpand">
@@ -72,14 +72,14 @@
                     <Entry x:Name="TotalParticipationCountEntry" Placeholder="Count" Keyboard="Numeric" Text="{Binding PostSvp.TotalParticipationCount, Mode=TwoWay}" />
                     
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                        <Button x:Name="ResetButton1" Text="Reset" />
+                        <Button x:Name="ResetButton1" Text="Reset" Clicked="OnResetClicked" />
                         <Button x:Name="NextPage" Text="Next Page" Clicked="onClickChangeTab" />
                     </StackLayout>
                 </StackLayout>
             </ScrollView>
         </ContentPage.Content>
     </ContentPage>
-    <ContentPage x:Name="page2" Title="Page 2" >
+    <ContentPage x:Name="pageTwo" Title="Page 2" >
         <ContentPage.Content>
             <ScrollView >
                 <StackLayout Margin="20,20,20,0" Spacing="10" Orientation="Vertical" VerticalOptions="FillAndExpand">
@@ -138,7 +138,7 @@
                     <Entry x:Name="PoliceContactNumberEntry" Placeholder="Phone Number" Keyboard="Numeric" Text="{Binding PostSvp.PoliceContactNumber, Mode=TwoWay}" />
 
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                        <Button x:Name="ResetButton2" Text="Reset" />
+                        <Button x:Name="ResetButton2" Text="Reset" Clicked="OnResetClicked" />
                         <Button x:Name="Submit" Text="Submit" Command="{Binding SubmitPostSvpForm}" />
                     </StackLayout>
                 </StackLayout>
