--- a/NexGenRedAlert/NexGenRedAlert/Views/LoginPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/LoginPage.xaml
@@ -7,9 +7,9 @@
             <Image Source="MyChoicesLogo.png" HorizontalOptions="FillAndExpand"
                        VerticalOptions="Start" Margin="20,20,50,20" />
             <ActivityIndicator x:Name="LoginActivityIndicator" HeightRequest="40" VerticalOptions="Start"
-                          HorizontalOptions="Center" Color="{StaticResource Primary}" IsRunning="True" IsVisible="False" />
-            
-            <Button x:Name="loginButton" Text="Sign In With Google" Margin="20,20,20,20" VerticalOptions="End"  Clicked="GoogleAuth" />
+                          HorizontalOptions="Center" Color="{StaticResource Primary}" IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}" />
+
+            <Button x:Name="loginButton" Text="Sign In With Google" Margin="20,20,20,20" VerticalOptions="End"  Command="{Binding AuthenticateUser }" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
