--- a/NexGenRedAlert/NexGenRedAlert/Views/PreSvpFormPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/PreSvpFormPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NexGenRedAlert.Views.PreSvpForm"
+             x:Class="NexGenRedAlert.Views.PreSvpFormPage"
              Title="PreSvp Forms">
     <ContentPage.Content>
         <ScrollView >
@@ -12,10 +12,7 @@
                     <Label x:Name="VillageName" Text="" FontSize="15" />
                     <Label x:Name="DistrictName" Text="" FontSize="15" />
                 </Frame>
-                
-                <Label x:Name="IpCodeLabel" Text="IP Code:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="IpCodeEntry" Placeholder="IP Code" Text="{Binding PreSvp.CreatedBy}"/>
-                
+
                 <Label x:Name="SvpDateLabel" Text="PreSvp Date" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                 <DatePicker x:Name="PreSvpDatePicker" Format="D" TextColor="Black"  Date="{Binding PreSvp.PreSvpDate}" />
 
@@ -58,15 +55,18 @@
                 <Label x:Name="CausesOfTraffickingLabel" Text="Causes of Trafficking (Risks):" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                 <Editor x:Name="CausesOfTraffickingEntry" Text="{Binding PreSvp.TraffickingCausesDesc}" />
                 
-                <Label x:Name="PreviousAwarnessLabel" Text="Previous Awarness (Yes/No) ?:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                <Picker x:Name="PreviousAwarnessPicker" Title="Previous Awarness (Yes/No) ?" SelectedItem="{Binding PreSvp.PreviousAwareness}" />
+                <Label x:Name="PreviousAwarenessLabel" Text="Previous Awareness (Yes/No) ?:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
+                <Picker x:Name="PreviousAwarenessPicker" Title="Previous Awareness (Yes/No) ?" SelectedItem="{Binding PreSvp.PreviousAwareness}" />
                 
                 <Label x:Name="PreviousAwarnessDescLabel" Text="Details of previous anti-trafficking awareness program:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                 <Editor x:Name="PreviousAwarnessDescEntry" Text="{Binding PreSvp.PreviousAwarenessDesc}"/>
                 
+                <ActivityIndicator x:Name="FormSubmissionIndicator" HeightRequest="40" VerticalOptions="Start"
+                          HorizontalOptions="Center" Color="{StaticResource Primary}" IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}" />
+                
                 <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                    <Button x:Name="ResetButton" FontSize="10"  Text="Reset" Clicked="OnResetClicked" />
-                    <Button x:Name="Submit" Text="Submit" FontSize="10"  Command="{Binding SubmitPreSvpForm}"/>
+                    <Button x:Name="ResetButton" Text="Reset" Clicked="OnResetClicked" />
+                    <Button x:Name="Submit" Text="Submit" Command="{Binding SubmitPreSvpForm}" />
                 </StackLayout>
                 
             </StackLayout>
