--- a/NexGenRedAlert/NexGenRedAlert/Views/SvpFormTabbedPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/SvpFormTabbedPage.xaml
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NexGenRedAlert.Views.PostSvpFormTabbed"
+             x:Class="NexGenRedAlert.Views.SvpFormTabbedPage"
             Title="Post-Svp Form">
-  <!--Pages can be added as references or inline-->
     <ContentPage x:Name="pageOne" Title="Page 1" >
         <ContentPage.Content>
             <ScrollView >
@@ -14,9 +13,7 @@
                         <Label x:Name="VillageName" Text="" FontSize="15" />
                         <Label x:Name="DistrictName" Text="" FontSize="15" />
                     </Frame>
-                    <Label x:Name="IpCodeLabel" Text="IP Code:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Entry x:Name="IpCodeEntry" Placeholder="IP Code"   Text="{Binding PostSvp.CreatedBy}"/>
-
+                    
                     <Label x:Name="SvpDateLabel" Text="PostSvpDate" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                     <DatePicker x:Name="SvpDatePicker" Format="D" TextColor="Black" Date="{Binding PostSvp.PostSvpDate, Mode=OneWayToSource}" />
 
@@ -104,21 +101,6 @@
                     <Label x:Name="TotalSvpCostLabel" Text="Total Svp Cost :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                     <Entry x:Name="TotalSvpCostEntry" Placeholder="Cost" Keyboard="Numeric" Text="{Binding PostSvp.TotalSvpCost, Mode=TwoWay}" />
 
-                    <Label x:Name="SummaryLabel" Text="Summary:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Editor x:Name="SummaryEntry" Text="{Binding PostSvp.Summary, Mode=TwoWay}" />
-
-                    <Label x:Name="PositiveFeedbackLabel" Text="Positive Feedback :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Editor x:Name="PositiveFeedbackEntry" Text="{Binding PostSvp.PositiveFeedback, Mode=TwoWay}" />
-
-                    <Label x:Name="ChallengesDescLabel" Text="Challenges :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Editor x:Name="ChallengesDescEntry" Text="{Binding PostSvp.ChallengesDesc, Mode=TwoWay}" />
-
-                    <Label x:Name="IsFollowUpRequiredDescLabel" Text="Is Follow-Up Required ?" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Editor x:Name="IsFollowUpRequiredDescEntry" Text="{Binding PostSvp.IsFollowUpRequiredDesc, Mode=TwoWay}" />
-
-                    <Label x:Name="RecomendationsLabel" Text="Recomendations :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                    <Editor x:Name="RecomendationsEntry" Text="{Binding PostSvp.Recomendations, Mode=TwoWay}" />
-
                     <Label x:Name="ElderNameLabel" Text="Village Elder Name:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                     <Entry x:Name="ElderNameEntry" Placeholder="Name"  Text="{Binding PostSvp.ElderName, Mode=TwoWay}" />
 
@@ -136,6 +118,24 @@
 
                     <Label x:Name="PoliceContactNumberLabel" Text="Police Contact Number :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                     <Entry x:Name="PoliceContactNumberEntry" Placeholder="Phone Number" Keyboard="Numeric" Text="{Binding PostSvp.PoliceContactNumber, Mode=TwoWay}" />
+
+                    <Label x:Name="SummaryLabel" Text="Summary:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
+                    <Editor x:Name="SummaryEntry" Text="{Binding PostSvp.Summary, Mode=TwoWay}" />
+
+                    <Label x:Name="PositiveFeedbackLabel" Text="Positive Feedback :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
+                    <Editor x:Name="PositiveFeedbackEntry" Text="{Binding PostSvp.PositiveFeedback, Mode=TwoWay}" />
+
+                    <Label x:Name="ChallengesDescLabel" Text="Challenges :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
+                    <Editor x:Name="ChallengesDescEntry" Text="{Binding PostSvp.ChallengesDesc, Mode=TwoWay}" />
+
+                    <Label x:Name="IsFollowUpRequiredDescLabel" Text="Is Follow-Up Required ?" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
+                    <Editor x:Name="IsFollowUpRequiredDescEntry" Text="{Binding PostSvp.IsFollowUpRequiredDesc, Mode=TwoWay}" />
+
+                    <Label x:Name="RecomendationsLabel" Text="Recomendations :" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
+                    <Editor x:Name="RecomendationsEntry" Text="{Binding PostSvp.Recomendations, Mode=TwoWay}" />
+
+                    <ActivityIndicator x:Name="FormSubmissionIndicator" HeightRequest="40" VerticalOptions="Start"
+                          HorizontalOptions="Center" Color="{StaticResource Primary}" IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}" />
 
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
                         <Button x:Name="ResetButton2" Text="Reset" Clicked="OnResetClicked" />
