--- a/NexGenRedAlert/NexGenRedAlert/Views/PreSvpFormPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/PreSvpFormPage.xaml
@@ -41,7 +41,7 @@
                 <Entry x:Name="MissingCountEntry" Placeholder="Missing count" Keyboard="Numeric" Text="{Binding PreSvp.MissingCasesCount}" />
                 
                 <Label x:Name="SchoolDropoutCountLabel" Text="School Dropout Count:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                <Entry x:Name="SchoolDropoutCountEntry" Placeholder="School dropout count" Keyboard="Numeric" Text="{Binding PreSvp.SchoolDropOutsCount}" />
+                <Entry x:Name="SchoolDropoutCountEntry" Placeholder="School dropout count" Keyboard="Numeric" Text="{Binding PreSvp.SchoolDropoutsCount}" />
                 
                 <Label x:Name="TrafficProneDescLabel" Text="Details of Neighbourhood trafficking-prone villages:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                 <Editor x:Name="TrafficProneDescEntry" Text="{Binding PreSvp.NeighbouringTrafficProneDesc}" />
@@ -58,8 +58,8 @@
                 <Label x:Name="PreviousAwarenessLabel" Text="Previous Awareness (Yes/No) ?:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
                 <Picker x:Name="PreviousAwarenessPicker" Title="Previous Awareness (Yes/No) ?" SelectedItem="{Binding PreSvp.PreviousAwareness}" />
                 
-                <Label x:Name="PreviousAwarnessDescLabel" Text="Details of previous anti-trafficking awareness program:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
-                <Editor x:Name="PreviousAwarnessDescEntry" Text="{Binding PreSvp.PreviousAwarenessDesc}"/>
+                <Label x:Name="PreviousAwarenessDescLabel" Text="Details of previous anti-trafficking awareness program:" FontSize="15" TextColor="{StaticResource PrimaryDark}"/>
+                <Editor x:Name="PreviousAwarenessDescEntry" Text="{Binding PreSvp.PreviousAwarenessDesc}"/>
                 
                 <ActivityIndicator x:Name="FormSubmissionIndicator" HeightRequest="40" VerticalOptions="Start"
                           HorizontalOptions="Center" Color="{StaticResource Primary}" IsRunning="{Binding IsLoading}" IsVisible="{Binding IsLoading}" />
