--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases-details/spouse_case.component.html
@@ -20,13 +20,13 @@
                     <div class="form-group">
                         <label for="SpouseHomePhone">Spouse Home phone</label>
                         <input formControlName="SpouseHomePhone" digits maxlength="14" class="form-control" />
-                            <small *ngIf="spouseForm.controls.SpouseHomePhone.dirty && spouseForm.controls.SpouseHomePhone.invalid" class="mat-text-warn">Please provide a valid phone</small>
+                            <small *ngIf="spouseForm.controls.SpouseHomePhone.dirty && spouseForm.controls.SpouseHomePhone.invalid" class="mat-text-warn">Please provide a valid phone number</small>
                     </div>
 
                     <div class="form-group">
                         <label for="SpouseMobilePhone">Spouse Mobile phone</label>
                         <input formControlName="SpouseMobilePhone" digits maxlength="14" class="form-control" />
-                            <small *ngIf="spouseForm.controls.SpouseMobilePhone.dirty && spouseForm.controls.SpouseMobilePhone.invalid" class="mat-text-warn">Please provide a valid mobile</small>
+                            <small *ngIf="spouseForm.controls.SpouseMobilePhone.dirty && spouseForm.controls.SpouseMobilePhone.invalid" class="mat-text-warn">Please provide a valid mobile number</small>
                     </div>
 
                     <div class="form-group">
