Changing AboutPage to NetworkAlertPage

--- a/NexGenRedAlert/NexGenRedAlert/Views/NetworkAlertPage.xaml
+++ b/NexGenRedAlert/NexGenRedAlert/Views/NetworkAlertPage.xaml
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="NexGenRedAlert.Views.AboutPage"
+             x:Class="NexGenRedAlert.Views.NetworkAlertPage"
              xmlns:vm="clr-namespace:NexGenRedAlert.ViewModels;"
-             Title="{Binding Title}">
-    <ContentPage.BindingContext>
-        <vm:AboutViewModel />
-    </ContentPage.BindingContext>
+             Title="Network Alert">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -20,12 +17,13 @@
             </StackLayout>
         </StackLayout>
         <ScrollView Grid.Row="1">
-            <StackLayout Orientation="Vertical" Padding="26,20,16,40" Spacing="10">
+            <StackLayout Orientation="Vertical" VerticalOptions="Center" Padding="26,20,5,40" Spacing="10">
+               <Image Source="alert.png" HorizontalOptions="Center" VerticalOptions="Start" WidthRequest="100" HeightRequest="100" Margin="20,20,50,20" />
                <Label>
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="Check your Internet connection !" FontAttributes="Bold" />
+                                <Span Text="Check your Internet connection !" FontAttributes="Bold" FontSize="Large" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
